<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/configuracion"
        android:icon="@drawable/configuraciones"
        android:title="@string/configuracion"
        app:showAsAction="always" />
    <item
        android:id="@+id/expanded_menu"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="Configuración"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/general2"
                android:icon="@mipmap/mundo"
                android:title="@string/general"
                app:showAsAction="always|withText" />

            <item
                android:id="@+id/cuentas"
                android:icon="@mipmap/billetera"
                android:title="@string/cuentas"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/transferencias"
                android:icon="@mipmap/traslados"
                android:title="@string/transferencias"
                app:showAsAction="never" />
            <item
                android:id="@+id/clave"
                android:icon="@mipmap/llave"
                android:title="@string/clave"
                app:showAsAction="never" />
            <item
                android:id="@+id/descuentos"
                android:icon="@mipmap/porcentaje"
                android:title="@string/descuentos"
                app:showAsAction="never" />
            <item
                android:id="@+id/cajeros"
                android:icon="@mipmap/cajero"
                android:title="cajeros"
                app:showAsAction="never" />
        </menu>
    </item>


</menu>